@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:29:51 brook Exp $
+
+R_PKGNAME=	praise
+R_PKGVER=	1.0.0
+CATEGORIES=	misc
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Praise users
+LICENSE=	mit
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
